--- a/src/app/components/jumbotron/jumbotron.component.html
+++ b/src/app/components/jumbotron/jumbotron.component.html
@@ -6,30 +6,30 @@
       <p class="col-md-10 fs-5">{{"HOME.AFRI" | translate}}</p>
       <div class="imagenes d-flex flex-wrap justify-content-around p-4">
 
-        <div class="card">
-          <img src="../../../assets/productos/anacardos.jpg" width="200px" alt="">
+        <div class="card1">
+          <img src="../../../assets/productos/anacardos-2.png" width="250px" alt="">
           <h5 class="card-title">Anacardos</h5>
         </div>
-        <a class="card" routerLink="/descripcion">
-          <img src="../../../assets/productos/baobab2.jpg" width="200px" alt="">
+        <div class="card2" >
+          <img src="../../../assets/productos/baobab3.png" width="200px" alt="">
           <h5 class="card-title">Beobab</h5>
 
-        </a>
-        <div class="card">
+        </div>
+        <div class="card3">
           <img src="../../../assets/productos/hibisco.jpg" width="200px" alt="">
           <h5 class="card-title">Hibisco</h5>
 
         </div>
-        <div class="card">
+        <div class="card4">
           <img src="../../../assets/productos/moringa.jpg" width="200px" alt="">
           <h5 class="card-title">Moringa</h5>
 
         </div>
       </div>
 
-      <a class="btn btn-primary btn-lg" routerLink="productos">See more...</a>
+      <a class="btn border  border-black p-2 color-black btn-lg" routerLink="productos">See more...</a>
       <br>
-      <a class="boton-tienda btn btn-primary btn-lg mt-3" routerLink="shop">Shop</a>
+      <a class="boton-tienda   border-black p-2 btn color-black  btn-lg mt-3" routerLink="shop">Shop</a>
     </div>
   </div>
 
