--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -32,8 +32,8 @@
             </select>
        </label>
 
-        <button routerLink="cart" class="btn btn-primary ms-2">
-            <i style="font-size: 30px;" class="bi-cart"></i>
+        <button routerLink="cart" class="btn ms-2">
+            <i style="font-size: 30px; color:white"  class="bi-cart"></i>
             <div style="font-size: 10px;" class="badge bg-danger">{{totalItem}}</div>
         </button>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
