--- a/src/app/pages/descripcion/anacardos-desc.component.html
+++ b/src/app/pages/descripcion/anacardos-desc.component.html
@@ -10,7 +10,7 @@
         </div>
       </div>
       <div class="col-lg-4 offset-lg-1 align-items-center  overflow-hidden shadow-lg">
-          <img class="rounded-lg-3 " src="../../../assets/productos/anacardos.jpg" alt="" width="100%">
+          <img class="rounded-lg-3 " src="../../../assets/productos/anacardos-2.png" alt="" width="100%">
       </div>
     </div>
   </div>
@@ -18,7 +18,7 @@
 
   <div class="row">
     <div class="col-lg-6 order-md-2 my-auto">
-<img src="../../../assets/productos/anacardos2.jpg" width="100%" alt="">
+<img src="../../../assets/productos/anacardos-2.jpg" width="100%" alt="">
     </div>
     <div class="col-lg-6 order-md-1">
     <h2 class="text-white">{{"ANAC-DESC.BENE" | translate}}</h2>
