--- a/src/app/pages/descripcion/baobab-desc.component.html
+++ b/src/app/pages/descripcion/baobab-desc.component.html
@@ -34,7 +34,7 @@
 
 <div class="row">
     <div class="col-md-6 my-auto">
-<img src="../../../assets/images/piel.jpg" width="100%" alt="">
+<img src="../../../assets/images/chica3.jpeg" width="100%" alt="">
     </div>
     <div class="col-md-6">
 <p class="fs-4 fw-bold text-white p-3">
