--- a/src/app/pages/productos/productos.component.html
+++ b/src/app/pages/productos/productos.component.html
@@ -10,7 +10,7 @@
     <hr>
     <div class="row mt-5">
         <div class="col-md-6">
-            <img src="../../../assets/productos/anacardos.jpg" width="100%" alt="">
+            <img src="../../../assets/productos/anacardos-2.png" width="100%" alt="">
         </div>
         <div class="col-md-6 justify-content-center  mt-5">
             <h2>Anacardos</h2>
@@ -47,7 +47,7 @@
 
     <div class="row mt-5">
         <div class="col-md-6">
-            <img src="../../../assets/productos/moringa.jpg" width="100%" alt="">
+            <img src="../../../assets/productos/moringa.png" width="100%" alt="">
         </div>
         <div class="col-md-6 justify-content-center  mt-5">
             <h2>Moringa</h2>
