--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 
 @import url('https://fonts.googleapis.com/css2?family=Orelega+One&family=Pattaya&family=Quintessential&family=Sedgwick+Ave&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@500;700&display=swap');
 *{
     margin: 0px;
     padding: 0px;
@@ -9,4 +11,5 @@
 
 body{
     background-color: black;
+    font-family: 'Oswald', sans-serif;
 }
