--- a/src/app/components/cartel/cartel.component.css
+++ b/src/app/components/cartel/cartel.component.css
@@ -6,9 +6,10 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-   font-family: 'Quintessential', cursive;;
+    font-family: 'Oswald', sans-serif;
 }
 .boton{
     padding:10px 30px;
     font-size: 1.5em;
+    border-color: aliceblue;
 }
