--- a/src/app/pages/descripcion/baobab-desc.component.css
+++ b/src/app/pages/descripcion/baobab-desc.component.css
@@ -13,6 +13,8 @@
 
     background-image: url('../../../assets/images/chica2.jpeg');
     background-position:left;
+    background-position:center center;
+
     background-size: cover;
     background-attachment: fixed;
     
