--- a/src/app/pages/profile/crearprofile/crearprofile.component.html
+++ b/src/app/pages/profile/crearprofile/crearprofile.component.html
@@ -5,7 +5,7 @@
       <div class="col-md-6 mt-5">
         <h2>Shipment/Envio/Sendung</h2>
         <div class="mb-3">
-          <form [formGroup]="clienteForm" (ngSubmit)="onSubmit()">
+          <form [formGroup]="clienteForm" (ngSubmit)="crearProfile()">
             <div class="row">
               <div class="col">
                 <div class="mb-3">
