--- a/src/app/pages/shop/shop.component.html
+++ b/src/app/pages/shop/shop.component.html
@@ -19,7 +19,7 @@
         <div class="row g-3">
          
           <div class="">
-            <button class="btn boton mt-2" (click)="addtocart(item)" (click)="item.cantidad=item.cantidad+1">
+            <button class="btn boton mt-2" (click)="addtocart(item)" (click)="item.cantidad=item.cantidad!+1">
               {{"SHOP.AGRE" | translate}}
             </button>
           </div>
