--- a/src/app/pages/profile/homeprofile/homeprofile.component.html
+++ b/src/app/pages/profile/homeprofile/homeprofile.component.html
@@ -1,10 +1,9 @@
 <div class="container">
-   
-<h2>Profile</h2>
+  <h2>Profile</h2>
 
-    <ul *ngIf="auth.user$ | async as user">
+  <ul *ngIf="auth.user$ | async as user">
     <li>{{ user.name }}</li>
     <li>{{ user.email }}</li>
   </ul>
- 
+  {{profile$ | async | json }}
 </div>
